@@ -170,7 +170,7 @@ public class GeoPkgSchemaTest {
         ArrayList<Map<String, Object>> columnDefinitions = new ArrayList<>();
         try (Connection cx = geopackage.getDataSource().getConnection();
                 Statement st = cx.createStatement();
-                ResultSet rs = st.executeQuery(String.format("PRAGMA table_info('%s')", tableName))) {
+                ResultSet rs = st.executeQuery("PRAGMA table_info('%s')".formatted(tableName))) {
             while (rs.next()) {
                 Map<String, Object> columnDefinition = new HashMap<>();
                 columnDefinition.put("cid", rs.getInt("cid"));
