@@ -53,7 +53,7 @@ public class CacheEntryKey implements Serializable {
 
     @Override
     public String toString() {
-        return String.format("CacheEntry[bucket: %s, key %s, block: %d, blockSize: %d]", bucket, key, block, blockSize);
+        return "CacheEntry[bucket: %s, key %s, block: %d, blockSize: %d]".formatted(bucket, key, block, blockSize);
     }
 
     @Override
